2022-06-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_PNMTOPS_NOSETPAGE): Partially revert change
	from 21 May and document why in a comment.

2022-06-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/troffrc: Skip loading of "papersize.tmac" if not in troff
	mode.

	Fixes <https://savannah.gnu.org/bugs/?62238>.  Thanks to Bjarni
	Ingi Gislason for the report.

2022-05-31  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac (AC_INIT): Add `--fallback` argument to
	`git-version-gen` to facilitate snapshot builds.

2022-05-31  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac: Report use of "g" prefix for commands and macro
	package compatibility wrappers.
	* m4/groff.m4 (GROFF_G): Fix code style nits.  Update
	indentation to match recent practice.

2022-05-31  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac: Fix code style nits and tweak report.  Stop
	superfluously using braces for shell parameter expansions that
	don't require them.  The shell is not make(1).  Say
	"installation _directory_ prefix" since another kind of prefix
	can be used by groff (the "g" in front of command and macro
	package names shared with AT&T troff).

2022-05-31  Dave Kemper <saint.snit@gmail.com>

	* doc/groff.texi: Fix content and style nits.
	  - Remove redundancy ("fixed-width... character that can't be
	    adjusted").
	  - Fix incorrect word ("environment value" -> "environment
	    variable").
	  - Add or change the placement of a couple tie{}s to comport
	    with style-guide recommendation.
	  - Grammarify.
	  - Clarify and tighten wording.

	Fixes <https://savannah.gnu.org/bugs/?62551>.

2022-05-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/node.cpp (font_position): If mounting a font
	fails and a third argument was given (to the `fp` request),
	report its value in the diagnostic message.  This could reveal a